Shifts panel implementation (no scheduling)
partial feature of shift panel - no scheduling for now

--- a/FixItYourselfHospital/FixItYourselfHospital.csproj
+++ b/FixItYourselfHospital/FixItYourselfHospital.csproj
@@ -63,15 +63,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Forms\EmployeesRoleListPage.xaml">
+    <Page Include="Forms\Pages\EmployeeShiftsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Forms\EmployeesSpecListPage.xaml">
+    <Page Include="Forms\Pages\EmployeesRoleListPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Forms\LoginWindow.xaml">
+    <Page Include="Forms\Pages\EmployeesSpecListPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Forms\Windows\LoginWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -82,34 +86,39 @@
     <Compile Include="Data\DataContext.cs" />
     <Compile Include="Data\StaticData.cs" />
     <Compile Include="Extensions\EnumExt.cs" />
-    <Compile Include="Forms\EmployeesRoleListPage.xaml.cs">
+    <Compile Include="Extensions\ValidationExt.cs" />
+    <Compile Include="Forms\Pages\EmployeeShiftsPage.xaml.cs">
+      <DependentUpon>EmployeeShiftsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Pages\EmployeesRoleListPage.xaml.cs">
       <DependentUpon>EmployeesRoleListPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Forms\EmployeesSpecListPage.xaml.cs">
+    <Compile Include="Forms\Pages\EmployeesSpecListPage.xaml.cs">
       <DependentUpon>EmployeesSpecListPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Forms\LoginWindow.xaml.cs">
+    <Compile Include="Forms\Windows\LoginWindow.xaml.cs">
       <DependentUpon>LoginWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Forms\MainHub.xaml">
+    <Page Include="Forms\Windows\MainHub.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Forms\PersonnelDetails.xaml">
+    <Page Include="Forms\Windows\PersonnelDetails.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\MainHub.xaml.cs">
+    <Compile Include="Forms\Windows\MainHub.xaml.cs">
       <DependentUpon>MainHub.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Forms\PersonnelDetails.xaml.cs">
+    <Compile Include="Forms\Windows\PersonnelDetails.xaml.cs">
       <DependentUpon>PersonnelDetails.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\PersonnelModel.cs" />
     <Compile Include="Models\RoleModel.cs" />
+    <Compile Include="Models\ShiftModel.cs" />
     <Compile Include="Models\SpecializationModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
