Nurse scheduling problem
solved NSP for FIY Hospital Application

--- a/FixItYourselfHospital/FixItYourselfHospital.csproj
+++ b/FixItYourselfHospital/FixItYourselfHospital.csproj
@@ -96,6 +96,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Data\DataContext.cs" />
+    <Compile Include="Data\ShiftRecalculation.cs" />
     <Compile Include="Data\StaticData.cs" />
     <Compile Include="Extensions\EnumExt.cs" />
     <Compile Include="Extensions\ValidationExt.cs" />
